Button, Input, Card, Login cmps

--- a/frontend/src/pages/Login/components/Login/Login.css
+++ b/frontend/src/pages/Login/components/Login/Login.css
@@ -1,5 +1,6 @@
 /* Login.css */
 
-.login {
-    /* TODO: impl */
+input::placeholder {
+    color: green !important;
+    font-size: medium !important;
 }
